[tool.poetry]
name = "2d-procedural-tree-lsystem"
version = "0.1.0"
description = "Scripts to generate 2d trees using 3d lsystems."
authors = ["Antoine Biard <antoine.biard.10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.2"
Pillow = "^9.0.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
